# flappybird-monorepo

./: .continueignore  .gitignore  .gitmodules  CHANGELOG.md  README.md  Slides.pptx  pyproject.toml  qlearningagent.py  qnetwork_testing.py  slides.md  test_agents.py  work.md
code/tests/: test_sanity.py
config/: config.yaml  dqn_v2.yaml  dqn_v3.yaml  dqn_v4.yaml  dqn_v5.yaml  dqn_v6.yaml
data/: README.md
flappybird/: README.md  __init__.py  agents.py  base_agent.py  benchmark.py  flappy_bird_env.py  handcrafted_agent.py  lidar.py  prioritized_experience_replay.py  qlearningagent.py  train_qtable_agent.py  weights2mp4.py
flappybird/src/: __init__.py  handcrafted_agent.py  qtable_agent.py  train_qtable_agent.py
flappybird/tests/: test_agents.py  test_handcrafted_agent.py  test_sanity.py  test_train_qtable.py
paper/: README.md  dqn_versions.md  experiments.md  failed-experiments.md  object-detection-with-rl.md  outline.md  paper.md
ppt/: ppt.md  questions.md
ppt_diagrams_src/: ssd.excalidraw  timeline.excalidraw  training-loop.excalidraw  visgraph-edges.excalidraw  visgraph-sol.excalidraw  visgraph.excalidraw
