[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flappybird-monorepo"
version = "v0.6.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "moviepy>=2.1.1",
    "numpy==1.26",
    "pre-commit>=4.0.1",
    "pygame>=2.6.1",
    "pyproject-toml>=0.1.0",
    "pyyaml>=6.0.2",
    "tensorboard>=2.18.0",
]


[tool.setuptools.packages.find]
where = ["flappybird"]



[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version = "0.7.0"
update_changelog_on_bump = true
major_version_zero = true
bump_message = "chore(release): bump version to $version"
