[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flappybird-monorepo"
version = "v0.6.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "moviepy>=2.1.1",
    "pre-commit>=4.0.1",
    "pygame>=2.6.1",
    "pytest>=8.3.4",
    "pyyaml>=6.0.2",
    "rich>=13.9.4",
    "stable-baselines3>=2.4.0",
    "tensorboard>=2.18.0",
    "tqdm>=4.67.1",
]


[tool.setuptools.packages.find]
where = ["flappybird"]



[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version = "0.8.0"
update_changelog_on_bump = true
major_version_zero = true
bump_message = "chore(release): bump version to $version"
